@@ -360,7 +360,7 @@ void ExultStudio::rotate_cont
 		return;
 	Shapes_vga_file *shfile = (Shapes_vga_file *) vgafile->get_ifile();
 					// Make sure data's been read in.
-	shfile->read_info(false, true);//+++++BG?
+	shfile->read_info(game_type, true);
 	Shape_info& info = shfile->get_info(shnum);
 	frnum = info.get_rotated_frame(frnum, 1);
 	set_spin("cont_frame", frnum);
